# team_4

./: .mcp.json  CLAUDE.md  REFACTORING_PLAN.md  docker-compose.yml  geolocation.js  index.html
client/: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  セキュリティガイド.md  セットアップ手順.md
docs/: alibaba-cloud-guide.md  architecture.md  emotion-recognition-implementation.md  frontend-refactor-plan.md  low-latency-techniques.md  realtime-video-processing-plan.md
get-location-sample/: geolocation.js  index.html
old/python-container/: .dockerignore  docker-compose.example.yml  pyproject.toml
old/python-container/src/speed_detector/: main.py
old/python-container/src/speed_detector/api/: __init__.py  schemas.py  simple.py
old/python-container/src/speed_detector/api/routes/: __init__.py  frames.py  speed.py
old/python-container/src/speed_detector/llm/: __init__.py
old/python-container/src/speed_detector/pipeline/: ocr.py  process.py  state_manager.py
old/python-container/src/speed_detector/shared/: __init__.py  memory.py
old/python-container/tests/: conftest.py  test_api_speed.py  test_state.py
old/python-container/tests/integration/: test_pipeline.py
python-container/: Dockerfile  requirements-docker.txt
rag-sample/: .env.example  .gitignore  README.md  docker-compose.yml  index.ts  package-lock.json  package.json  tsconfig.json
routeSuggest/: .env.example  package-lock.json  package.json  tsconfig.json
server/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  REFRACTOR_PLAN.md  check-conversations.ts  (+10 more)
(+185 files in other folders)
